--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -68,8 +68,19 @@
 
     -# CSS
     -# ==========================================================================
-    = stylesheet_link_tag "base", media: "all"
-    -# %link{:rel => "stylesheet", :media => "only screen and (min-width: 45em)", :href => "/css/widescreen.css"}
+
+
+    -# For all browsers
+    = stylesheet_link_tag '320andup/style.css'
+    = stylesheet_link_tag '320andup/print.css',  :media => 'print'
+    -# For progressively larger displays
+    = stylesheet_link_tag '320andup/480.css',  :media => 'only screen and (min-width: 480px)'
+    = stylesheet_link_tag '320andup/600.css',  :media => 'only screen and (min-width: 600px)'
+    = stylesheet_link_tag '320andup/768.css',  :media => 'only screen and (min-width: 768px)'
+    = stylesheet_link_tag '320andup/992.css',  :media => 'only screen and (min-width: 992px)'
+    -# For Retina displays
+    = stylesheet_link_tag '320andup/2x.css',  :media => 'only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5)'
+    = stylesheet_link_tag "application"
 
     -# IE Fixes
     -# ==========================================================================
