--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,15 @@
-.row
-  .span4
-    Side
-  .span3.offset2
-    Offset
+
+.container-fluid
+  .navbar
+    .navbar-inner
+      %a.brand{ href: root_path } ChefSteps
+
+  .row-fluid
+    .center.span12
+      %img{ src: 'http://lorempixel.com/1600/900/food' }
+
+  .row-fluid
+    .span4
+      Side
+    .span3.offset2
+      Offset
