--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,7 +71,7 @@
 
 
     -# For all browsers
-    = stylesheet_link_tag "styles"
+    = stylesheet_link_tag 'application'
     = stylesheet_link_tag 'print',  :media => 'print'
     -# For progressively larger displays
     -# = stylesheet_link_tag '320andup/480.css',  :media => 'only screen and (min-width: 480px)'
