Start some basic layout

--- a/app/assets/stylesheets/application/home/_index.css.sass
+++ b/app/assets/stylesheets/application/home/_index.css.sass
@@ -1,4 +1,19 @@
-.container-fluid, .container
-  max-width: 1140px
+#main-container
+  max-width: 1170px
   margin: 0 auto
+
+.row
+  margin-top: 2em
+.hero
+  position: relative
+
+.hero-overlay
+  position: absolute
+  background: white
+  bottom: 10%
+  left: 4%
+  width: 30%
+  height: 20%
+  padding: 0.5em
+  font-size: 24px
 
