--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -121,7 +121,8 @@
     -# Content
     -# ==========================================================================
 
-    = yield
+    #main-container
+      = yield
 
     -# JS
     -# ==========================================================================
