fix google analytics

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -132,15 +132,10 @@
     -# Custom JS
     = javascript_include_tag "application"
 
-    -#
     -# Asynchronous Google Analytics
-    -# Change UA-XXXXX-X to be your site's ID
-    -# mathiasbynens.be/notes/async-analytics-snippet
-    -#
-
     - if Rails.env.production?
       :javascript
-        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+        var _gaq=[['_setAccount','UA-34555970-1'],['_trackPageview']];
         (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
         g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
         s.parentNode.insertBefore(g,s)}(document,'script'));
