Use a header partial

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -128,7 +128,9 @@
         %p.alert= alert
       - if flash[:error]
         %p.alert= flash[:error]
-      = yield
+      .container
+        = render 'layouts/header'
+        = yield
 
     -# JS
     -# ==========================================================================
