Move general style to application.css

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -3,5 +3,10 @@
 .center
   text-align: center
 
+#main-container
+  max-width: 1170px
+  margin: 0 auto
+
 @import application/home/index
+@import application/courses/show
 @import bootstrap-responsive
