pull course breakdown into a partial

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -25,13 +25,5 @@
         .span3
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   .span4
-    %dl.course-breakdown
-      %dt Syllabus
-      %dt Module 1
-      %dd Topic A
-      %dd Activity B
-      %dd Topic C
-      %dt Module 2
-      %dd Topic A
-      %dd Activity B
-      %dd Topic C
+    = render 'course_breakdown'
+
