--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -8,7 +8,7 @@
 .row
   .span8
     %h2 Instructors
-    %ul.unstyled.instructors
+    %ul.unstyled
       %li.row
         .span1
           %img{ src: 'http://lorempixel.com/100/100/people' }
