Add media query for video iframe height

--- a/app/assets/stylesheets/application/courses/_show.css.sass
+++ b/app/assets/stylesheets/application/courses/_show.css.sass
@@ -1,6 +1,10 @@
 .course-overview-video
   height: 450px
 
+@media(max-width: 767px)
+  .course-overview-video
+    height: 200px
+
 .course-breakdown
   font-size: 20px
   dt
