Using list of lists for breakdown

--- a/app/views/courses/_course_breakdown.html.haml
+++ b/app/views/courses/_course_breakdown.html.haml
@@ -1,11 +1,16 @@
-%dl.course-breakdown
-  %dt Syllabus
-  %dt Module 1
-  %dd Topic A
-  %dd Activity B
-  %dd Topic C
-  %dt Module 2
-  %dd Topic A
-  %dd Activity B
-  %dd Topic C
+%ul.course-breakdown.unstyled
+  %li
+    %h3 Syllabus
+  %li
+    %h3 Module 1
+    %ul.unstyled
+      %li Topic A
+      %li Activity B
+      %li Topic C
+  %li
+    %h3 Module 2
+    %ul.unstyled
+      %li Topic A
+      %li Activity B
+      %li Topic C
 
