--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -11,12 +11,12 @@
     %ul.unstyled
       %li.row
         .span1
-          %img{ src: 'http://lorempixel.com/100/100/people' }
+          %img{ src: 'http://lorempixel.com/100/100/people/2' }
         .span3
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       %li.row
         .span1
-          %img{ src: 'http://lorempixel.com/100/100/people' }
+          %img{ src: 'http://lorempixel.com/100/100/people/1' }
         .span3
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       %li.row
