Put Activities under topics

--- a/app/views/courses/_course_breakdown.html.haml
+++ b/app/views/courses/_course_breakdown.html.haml
@@ -4,13 +4,22 @@
   %li
     %h3 Module 1
     %ul.unstyled
-      %li Topic A
-      %li Activity B
-      %li Topic C
+      %li
+        %h4 Topic A
+        %ul.unstyled
+          %li Activity B
+      %li
+        %h4 Topic C
   %li
     %h3 Module 2
     %ul.unstyled
-      %li Topic A
-      %li Activity B
-      %li Topic C
-
+      %li
+        %h4 Topic A
+        %ul.unstyled
+          %li Activity B
+          %li Activity C
+          %li Activity D
+      %li
+        %h4 Topic B
+        %ul.unstyled
+          %li Activity E
