Need class on video's container

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -2,8 +2,8 @@
   .span12
     %h2 Intro to Sous Vide
 
-.row
-  %iframe.course-overview-video.span12{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw'}
+.row.video-container
+  %iframe{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw'}
 
 .row
   .span8
