--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -43,3 +43,23 @@
             Polaroid umami locavore, aesthetic pop-up sed dolore nihil butcher nulla.
             Dolore tofu artisan tattooed vegan. Magna high life occaecat,
 
+.row
+  .span12
+    %h3 Step 5 - Become One with the Egg
+  .row
+    .span4
+      %h4 Ingredient
+      %ul.unstyled
+        %li Egg
+        %li Milk
+    .span4
+      %h4 Weight
+      %ul.unstyled
+        %li 1 gram
+        %li 1 ounce
+    .span4
+      %p
+        Brunch next level polaroid velit organic, PBR sunt proident artisan.
+        Polaroid umami locavore, aesthetic pop-up sed dolore nihil butcher nulla.
+        Dolore tofu artisan tattooed vegan. Magna high life occaecat,
+
