Weight and Ingredient should be on the same lines

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -18,7 +18,7 @@
       %li Fork
       %li Stove
 
-- 5.times do
+- 3.times do
   .row
     .span4.video-container
       %iframe{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw'}
@@ -26,13 +26,14 @@
     .span8
       .row
         .span8
-          %h3 Step 1
+          %h3 Step 1 - Beat Egg
       .row
-        .span4
+        .span2
           %h4 Ingredient
           %ul.unstyled
             %li Egg
             %li Milk
+        .span2
           %h4 Weight
           %ul.unstyled
             %li 1 gram
