put the video container under a span12

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -2,8 +2,10 @@
   .span12
     %h2 Intro to Sous Vide
 
-.row.video-container
-  %iframe{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw'}
+.row
+  .span12
+    .video-container
+      %iframe{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw', :frameborder => 0}
 
 .row
   .span8
