--- a/app/views/partials/_title_bar.html.haml
+++ b/app/views/partials/_title_bar.html.haml
@@ -20,7 +20,7 @@
             %a.accordion-toggle{'data-toggle'=> 'collapse', 'data-parent' => '#overview', :href => '#collapseTwo'}
               Module 2
               %i.icon-caret-down
-          #collapseTwo.accordion-body.collapse.in
+          #collapseTwo.accordion-body.collapse
             .accordion-inner
               Other STuff and stuff
 
