Update twitter bootstrap

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,4 @@
-@import bootstrap
+@import twitter/bootstrap-no-sprites
 
 .center
   text-align: center
@@ -8,4 +8,4 @@
   margin: 0 auto
 
 @import application/home/index
-@import bootstrap-responsive
+@import twitter/bootstrap/responsive
