--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -9,6 +9,6 @@
   margin: 0 auto
 
 @import application/home/index
-@import application/partials/title_bar
+@import application/title_bar
 
 @import twitter/bootstrap/responsive
