--- a/app/views/courses/_title_bar.html.haml
+++ b/app/views/courses/_title_bar.html.haml
@@ -9,18 +9,18 @@
       #overview
         .accordion-group
           .accordion-heading
-            %a.accordion-toggle{'data-toggle'=> 'collapse', 'data-parent' => '#overview', :href => '#collapseOne'}
+            %a.accordion-toggle{'data-toggle'=> 'collapse', 'data-parent' => '#overview', :href => '#collapse-one'}
               Module 1
               %i.icon-caret-down
-          #collapseOne.accordion-body.collapse.in
+          #collapse-one.accordion-body.collapse.in
             .accordion-inner
               = link_to "Course", course_path(1)
         .accordion-group
           .accordion-heading
-            %a.accordion-toggle{'data-toggle'=> 'collapse', 'data-parent' => '#overview', :href => '#collapseTwo'}
+            %a.accordion-toggle{'data-toggle'=> 'collapse', 'data-parent' => '#overview', :href => '#collapse-two'}
               Module 2
               %i.icon-caret-down
-          #collapseTwo.accordion-body.collapse
+          #collapse-two.accordion-body.collapse
             .accordion-inner
-              Other STuff and stuff
+              Other Stuff and stuff
 
