--- a/app/views/courses/_title_bar.html.haml
+++ b/app/views/courses/_title_bar.html.haml
@@ -9,7 +9,7 @@
       #overview
         .accordion-group
           .accordion-heading
-            %a.accordion-toggle{'data-toggle'=> 'collapse', 'data-parent' => '#overview', :href => '#collapse-one'}
+            %a.accordion-toggle{ data: { toggle: 'collapse', parent: '#overview' }, :href => '#collapse-one'}
               Module 1
               %i.icon-caret-down
           #collapse-one.accordion-body.collapse.in
@@ -17,7 +17,7 @@
               = link_to "Course", course_path(1)
         .accordion-group
           .accordion-heading
-            %a.accordion-toggle{'data-toggle'=> 'collapse', 'data-parent' => '#overview', :href => '#collapse-two'}
+            %a.accordion-toggle{ data: { toggle: 'collapse', parent: '#overview' }, :href => '#collapse-two'}
               Module 2
               %i.icon-caret-down
           #collapse-two.accordion-body.collapse
