Don't show frame borders for iframes

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -3,7 +3,7 @@
 .row
   .span12
     .video-container
-      %iframe{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw', :frameborder => 0}
+      %iframe{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw'}
 
 .row
   .span8
