Show comments on step-by-step page

--- a/app/views/activities/step_by_step.html.haml
+++ b/app/views/activities/step_by_step.html.haml
@@ -64,3 +64,6 @@
           Polaroid umami locavore, aesthetic pop-up sed dolore nihil butcher nulla.
           Dolore tofu artisan tattooed vegan. Magna high life occaecat,
 
+.row
+  .span12
+    = render 'layouts/disqus_comments', id: 'step-by-step'
