Add comments to lecture

--- a/app/views/activities/lecture.html.haml
+++ b/app/views/activities/lecture.html.haml
@@ -23,3 +23,7 @@
         brooklyn dolore delectus, eu exercitation you probably haven't
         heard of them mcsweeney's ethical swag polaroid post-ironic elit.
 
+.row
+  .span12
+    = render 'layouts/disqus_comments', id: 'lecture'
+
