--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -6,22 +6,11 @@
       .video-container
         %iframe{:src => activity.video_url }
 
--# - 3.times do
--#   .row
--#     .span6
--#       .video-container
--#         %iframe{:src => 'http://www.youtube.com/embed/ydOB-YNJ8Jw'}
--#     .span6
--#       %p
--#         Helvetica non irony, aliqua etsy retro viral sint street art brunch.
--#         Austin you probably haven't heard of them leggings in, craft beer
--#         gentrify thundercats messenger bag pinterest umami brooklyn marfa
--#         food truck. Eu wes anderson you probably haven't heard of them,
--#         four loko flexitarian laborum mollit adipisicing brooklyn trust
--#         fund pitchfork dolor bicycle rights cillum.  Next level street art
--#         brooklyn dolore delectus, eu exercitation you probably haven't
--#         heard of them mcsweeney's ethical swag polaroid post-ironic elit.
-
+- activity.steps.each_with_index do |step, i|
+  - if step.has_video?
+    = render 'video_step', step: step, count: i+1
+  - else
+    = render 'step', step: step, count: i+1
 .row
   .span12
     = render 'layouts/disqus_comments', id: activity.id
