add border between steps

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,5 +13,6 @@ iframe
 
 @import application/home/index
 @import application/title_bar
+@import application/step
 
 @import twitter/bootstrap/responsive
