Give iframe videos a min-height

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -11,6 +11,11 @@
 iframe
   border: none
 
+
+.fluid-width-video-wrapper
+  iframe
+    min-height: 200px
+
 @import application/home/index
 @import application/title_bar
 @import application/step
