--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -25,7 +25,7 @@
         .span3
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   .span4
-    = render 'course_breakdown'
+    = render 'course_breakdown', activities: activities
 
 .row
   .span12
