Display activity spec sheet

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -4,7 +4,9 @@
   .row
     .span12
       .video-container
-        %iframe{:src => activity.video_url }
+        %iframe{src: activity.video_url }
+
+= render 'spec_sheet', ingredients: ingredients, special_equipment: required_equipment, optional_equipment: optional_equipment
 
 - activity.steps.each_with_index do |step, i|
   - if step.video?
