style spec_sheet

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,6 +19,7 @@ iframe
 @import application/home/index
 @import application/title_bar
 @import application/step
+@import application/spec_sheet
 
 @import twitter/bootstrap/responsive
 
