don't need to wrap a for existence test

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,6 +1,6 @@
 = render 'courses/title_bar'
 
-- if activity.video?
+- if activity.video_url?
   .row
     .span12
       .video-container
@@ -9,7 +9,7 @@
 = render 'spec_sheet', activity: activity
 
 - activity.steps.each_with_index do |step, i|
-  - if step.video?
+  - if step.video_url?
     = render 'video_step', step: step, count: i+1
   - else
     = render 'step', step: step, count: i+1
