resize images and add caption

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -12,29 +12,8 @@
   .row:first-child
     margin-top: 0
 
-// #main-container
-//   max-width: 1170px
-//   margin: 0 auto
-
 iframe
   border: none
-
-/* ########## */
-/* $CAROUSEL  */
-/* ########## */
-.carousel
-  margin-bottom: 0
-.carousel .item
-  width: 100%
-  max-height: 600px
-
-.carousel .item img
-  width: 100%
-
-.carousel .carousel-control
-  background: none
-  border: none
-  top: 50%
 
 .fluid-width-video-wrapper
   iframe
@@ -46,10 +25,10 @@ iframe
     margin-left: -20px
     margin-right: -20px
 
-@import application/home/index
 @import application/title_bar
 @import application/step
 @import application/spec_sheet
+@import application/carousel
 
 @import twitter/bootstrap/responsive
 
