--- a/app/views/layouts/_disqus_comments.html.erb
+++ b/app/views/layouts/_disqus_comments.html.erb
@@ -1,18 +1,25 @@
-<div id="disqus_thread"></div>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<div class="hero-unit hero-comments">
+  <div class="container">
+  <div class="row comments">
+      <div class="span12">
+        <div id="disqus_thread"></div>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-<script type="text/javascript">
-var disqus_shortname = 'delvestaging';
-var disqus_identifier = "<%= id %>";
-<% if Rails.env.development? -%>
-var disqus_developer = 1;
-<% end -%>
+        <script type="text/javascript">
+        var disqus_shortname = 'delvestaging';
+        var disqus_identifier = "<%= id %>";
+        <% if Rails.env.development? -%>
+        var disqus_developer = 1;
+        <% end -%>
 
-<%# DON'T EDIT BELOW THIS LINE -%>
-(function() {
-  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-  dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-})();
-</script>
-
+        <%# DON'T EDIT BELOW THIS LINE -%>
+        (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+        </script>
+      </div>
+    </div>
+  </div>
+</div>
