Tweak more style

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,6 +1,9 @@
 @import twitter/bootstrap-no-sprites
 @import font-awesome
 
+body
+  font-size: 16px
+
 .center
   text-align: center
 
@@ -23,7 +26,7 @@ iframe
   iframe
     min-height: 200px
 
-.top-video, .course-info, .spec-sheet
+.top-video, .course-info, .spec-sheet, .creator, .instructor
   margin-bottom: 20px
 
 #disqus_thread
