--- a/app/assets/stylesheets/application/_step.css.sass
+++ b/app/assets/stylesheets/application/_step.css.sass
@@ -2,5 +2,8 @@
   border-top: 2px solid black
   margin-bottom: 20px
 
+  .video-container
+    margin-top: 20px
+
 .step:first-child
   border-top: 0 none
