--- a/app/assets/stylesheets/application/_carousel.css.sass
+++ b/app/assets/stylesheets/application/_carousel.css.sass
@@ -25,9 +25,9 @@
   /* text colors */
 
 .caption-content
-  background: white
+  background: rgba(255, 255, 255, 0.8)
   display: inline-block
-  padding: 10px 15px
+  padding: 0 15px 15px 15px
 
 .caption.top-left, .caption.top-right
   top: 25px
