--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -10,17 +10,17 @@
     .span8
       %h2 Instructors
       %ul.unstyled
-        %li.row
+        %li.row.instructor
           .span1
             %img{ src: 'http://lorempixel.com/100/100/people/2' }
           .span3
             %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        %li.row
+        %li.row.instructor
           .span1
             %img{ src: 'http://lorempixel.com/100/100/people/1' }
           .span3
             %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        %li.row
+        %li.row.instructor
           .span1
             %img{ src: 'http://lorempixel.com/100/100/people' }
           .span3
