make caption responsive

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -32,15 +32,12 @@ iframe
 #disqus_thread
   padding-top: 20px
 
-@media (max-width: 767px)
-  // make this items full-width (remove body padding)
-  .hero-unit, .slider-block
-    margin-left: -20px
-    margin-right: -20px
+
 
 @import application/title_bar
 @import application/step
 @import application/carousel
 
 @import twitter/bootstrap/responsive
+@import application/media_queries
 
