--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,8 +11,8 @@
     %a.carousel-control.right{ href: '#myCarousel', data: { slide: 'next' } } &rsaquo;
   .caption.middle-left.container
     .caption-content
-      %h3 Free to learn
-      = link_to "Course Preview", course_path(1), {class: 'btn'}
+      %h3.medium Free to learn
+      = link_to "Course Preview", course_path(1), {class: 'btn small'}
 
 .container
   .row
