use build_video_url for youtubes

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -5,7 +5,7 @@
     .row.top-video
       .span12
         .video-container
-          %iframe{src: activity.video_url }
+          %iframe{src: activity.video}
 
 = render 'spec_sheet', activity: activity
 
