--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -4,7 +4,7 @@
   .row.top-video
     .span12
       .video-container
-        %iframe{src: 'http://www.youtube.com/embed/ydOB-YNJ8Jw'}
+        %iframe{src: @video_url }
 
   .row.course-info
     .span8
