--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -4,7 +4,7 @@
   .row.top-video
     .span12
       .video-container
-        %iframe{src: @video_url }
+        %iframe{src: youtube_url("Urd5P3yfLZo") }
 
   .row.course-info
     .span8
