Make course navigation stick to the top

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -32,9 +32,7 @@ iframe
 #disqus_thread
   padding-top: 20px
 
-
-
-@import application/title_bar
+@import application/nav_bar
 @import application/step
 @import application/carousel
 
