Add activity navigation

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,6 +1,6 @@
 = render 'courses/title_bar'
 
-= render 'courses/navigation'
+= render 'courses/navigation', model: activity
 
 .container
   - if activity.youtube_id?
