style fixes + copy tweak

--- a/app/assets/stylesheets/application/_nav_bar.css.sass
+++ b/app/assets/stylesheets/application/_nav_bar.css.sass
@@ -1,11 +1,16 @@
 .sticky-navbar
   width: 100%
   position: relative
-  background: rgba(255, 255, 255, 0.5)
+  background: rgba(255, 255, 255, 0.7)
   z-index: 9999
   &.stuck-to-top
     position: fixed
     top: 0
+
+.sticky-navbar
+  margin-bottom: 5px
+  .btn
+    margin-top: 5px
 
 .menu
   position: relative
