--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -20,7 +20,7 @@
       %h2 Learn the modernist technique
       %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar lobortis dolor, sit amet mollis sem sagittis in. Etiam nec mauris enim. Praesent suscipit, felis eu facilisis lobortis, eros odio adipiscing felis, et congue justo est ut libero. Praesent dictum, nulla eu ultricies ornare, arcu justo pulvinar nisl, id adipiscing velit nisl nec nunc. Duis mollis, risus vitae suscipit tristique, augue odio pellentesque tortor, in consectetur eros ligula et nulla. In id odio quam. Nulla nisl libero, lacinia ac faucibus in, feugiat eu est. Donec nec mi neque, et lacinia nisi. In hac habitasse platea dictumst.
     .span4
-      %h3 From the creators of Modernist Cuisine
+      %h3 From creators of Modernist Cuisine
       %ul.unstyled.creators
         %li.creator.row
           .span1
