sharing with elegant icon

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -32,8 +32,8 @@ iframe
 #disqus_thread
   padding-top: 20px
 
-
-
+@import application/sprites
+@import application/header
 @import application/title_bar
 @import application/step
 @import application/carousel
