--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,14 @@
 .navbar
   .navbar-inner
-    %a.brand{ href: root_path } ChefSteps
-
+    .container
+      %a.brand{ href: root_path } ChefSteps
+      .nav.pull-right
+        .addthis_toolbox.addthis_default_style.addthis_32x32_style
+          %a.addthis_button_facebook
+            %i
+          %a.addthis_button_twitter
+            %i
+          %a.addthis_button_pinterest
+            %i
+          %a.addthis_button_compact
+            %i
