--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -139,3 +139,4 @@
     -# Custom JS
     = javascript_include_tag "application"
     = render 'layouts/google_analytics' if Rails.env.production?
+    = render 'layouts/add_this'
