--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,10 +5,10 @@
       .nav.pull-right
         .addthis_toolbox.addthis_default_style.addthis_32x32_style
           %a.addthis_button_facebook
-            %i
+            %i.icon-facebook-sign
           %a.addthis_button_twitter
-            %i
-          %a.addthis_button_pinterest
-            %i
+            %i.icon-twitter-sign
+          %a.addthis_button_pinterest_pinit
+          %a.addthis_button_google_plusone
           %a.addthis_button_compact
-            %i
+            %i.icon-plus
