Big ugly buttons

--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -33,33 +33,9 @@
   background: none
   color: #111
 
-
 .addthis_toolbox
-  width: 300px
+  vertical-align: baseline
+  width: 400px
+  padding-top: 10px
   a
-    line-height: 32px
     vertical-align: baseline
-  a:hover
-    text-decoration: none
-  i, .at_PinItButton
-    display: inline-block
-    font-size: 40px
-  .at_PinItButton
-    background: none
-    border: 0
-    text-indent: 0
-    +box-shadow(none)
-
-    width: auto
-    height: auto
-    line-height: inherit
-    background-image: none
-    background-position: 0% 0%
-    background-repeat: repeat
-    &:before
-      content: "\f0d3"
-      font-family: FontAwesome
-      font-weight: normal
-      font-style: normal
-      display: inline-block
-      text-decoration: inherit
